--- a/assets/styles.css
+++ b/assets/styles.css
@@ -194,7 +194,7 @@ progress {
   height: 1rem;
   overflow: hidden;
   font-size: 1.5rem;
-  background-color: #e9ecef;
+  background-color: #27292d;
   border-radius: 0.25rem;
 }
 
